style.css
.banner {
    /* background-color: #eb7a77; */
    background: linear-gradient(#eb7a77, #ef5e59);
    padding: 20px;
    margin: 0px;
    align-items: center;
    text-align: center;
    height: 100px;
    border-radius: 16px;
}

.banner img {
    text-align: center;
}

#pagetitle {
    color: white;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 900;
    font-size: 30px;
    margin: -5px;
}

.content {
    margin: 40px;
    margin-bottom: 40px;
}

.content .ques {
    font-weight: 600;
    font-size: 24px;
}

.ans .sub {
    font-size: 18px;
    font-weight: 700;
}

.ans, #divcontent {
    font-family: 'Times New Roman', Times, serif;
}

.about-myself {
    font-size: 15px;
    font-family: 'Times New Roman', Times, serif;
}

.email {
    color:#eb7a77;
    text-decoration: underline;
}

#greeting {
    font-size: 20px;
    font-weight: 500;
    text-align: center;
}

.block {
    margin: 5px;
    z-index: -1;
    /* filter: blur(2px); */
}

#music .cover {
    background-color: rgba(0, 0, 0, 0.4);
    height: 230px;
    border-radius: 8px;
}

#music {
    text-align: right;
    width: 100%;
    background-image: url("./res/music.png");
    background-size: 125%;
    background-position: top;
    background-repeat: repeat-y;
    border-radius: 8px;
    height: 230px;
}

#apps .cover {
    background-color: rgba(0, 0, 0, 0.4);
    height: 280px;
    border-radius: 8px;
}

#apps {
    text-align: left;
    width: 100%;
    background-image: url("./res/codes.png");
    background-size: 100%;
    background-position: top;
    background-repeat: repeat-y;
    border-radius: 8px;
    height: 280px;
}

#videos .cover {
    background-color: rgba(255, 255, 255, 0.1);
    height: 180px;
    border-radius: 8px;
}

#videos {
    text-align: right;
    width: 100%;
    background-image: url("./res/cockpit.jpg");
    background-size: 100%;
    background-position: top;
    background-repeat: repeat-y;
    border-radius: 8px;
    height: 180px;
}

#learning-materials .cover {
    background-color: rgba(0, 0, 0, 0.3);
    height: 160px;
    border-radius: 8px;
}

#learning-materials {
    text-align: left;
    width: 100%;
    background-image: url("./res/nju.jpg");
    background-size: 100%;
    background-position: 100% 80%;
    background-repeat: repeat-y;
    border-radius: 8px;
    height: 160px;
}

#divcontent {
    color: white;
    margin: 5px;
    padding-right: 12px;
    padding-left: 12px;
    padding-bottom: 10px;
    z-index: 100;
}

#divcontent a {
    color: rgb(241, 255, 254);
    text-decoration: none;
}

#divcontent a:hover {
    background-color: #bbbbbb2f;
    background-size: 110%;
    border-radius: 5px;
}

#divtitle {
    padding: 15px;
    z-index: 100;
}

#divtitle a {
    font-size: 24px;
    font-weight: 300;
    color: white;
    margin: 5px;
    text-decoration: none;
}

#divtitle a:hover {
    background-color: #bbbbbb2f;
    background-size: 110%;
    border-radius: 5px;
}

.bottom {
    height: 154px;
    background-color: #eeeeee;
    text-align: center;
    margin: -10px;
    padding: 5px;
}

.bottom a {
    color: black;
    margin: 14px;
    text-decoration: none;
}

.bottom a:hover {
    background-color: #bbb;
    background-size: 110%;
    border-radius: 5px;
}

#more_about {
    font-weight: 700;
    font-size: 20px;
}

